force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Additional_Contacts__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Additional_Contacts__c</fullName>
    <label>Additional Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>