force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Client_TimeZoneSidKey__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Client_TimeZoneSidKey__c</fullName>
    <description>Added for SF-1291 to hold timezone selected on CTS.</description>
    <inlineHelpText>Represents the time zone selected by the client booking the appointment on the click-to-schedule page.  This field will only have a value for meetings booked via click-to-schedule.</inlineHelpText>
    <label>Client TimeZoneSidKey</label>
    <length>40</length>
    <type>Text</type>
</CustomField>