force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Confirmation_Number__c</fullName>
    <label>Confirmation Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>