force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Description__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Description__c</fullName>
    <label>Description</label>
    <length>32100</length>
    <type>LongTextArea</type>
</CustomField>