force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Event_Id__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Event_Id__c</fullName>
    <description>Text representation of the related Event.  Used to create links such as on Email Templates.</description>
    <label>Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>