force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Event_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Event_Owner_Email__c</fullName>
    <description>The Email address of the associated Event Owner  is copied to this field so that email may be directed to the Event Owner.</description>
    <inlineHelpText>The Email address of the associated Event Owner  is copied to this field so that email may be directed to the Event Owner.</inlineHelpText>
    <label>Event Owner Email</label>
    <type>Email</type>
</CustomField>