force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Invitation__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Invitation__c</fullName>
    <label>TimeTrade Invitation</label>
    <referenceTo>TimeTrade_SF1__Invitation__c</referenceTo>
    <relationshipLabel>TimeTrade Meetings</relationshipLabel>
    <relationshipName>TimeTrade_Meetings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>