force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Location__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Location__c</fullName>
    <inlineHelpText>Copied from Invitation Location.  CTS Parameters may fill in merge references.</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>