force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Location_Callin_ICS__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Location_Callin_ICS__c</fullName>
    <formula>IF( TEXT(TimeTrade_SF1__Web_Conference_Type__c) != &#39;&#39;,
&#39;Web Conference URL:&lt;br /&gt;&#39; + TimeTrade_SF1__Web_Conference_Link__c + &#39;&lt;br /&gt;&lt;br /&gt;Meeting Number:&lt;br /&gt;&#39; + TimeTrade_SF1__Web_Conference_Number__c + IF(ISBLANK(TimeTrade_SF1__Web_Conference_Password__c),&#39;&#39;,&#39;&lt;br /&gt;&lt;br /&gt;Meeting Password: &#39; + TimeTrade_SF1__Web_Conference_Password__c) + &#39;&lt;br /&gt;&lt;br /&gt;Join by Phone:&lt;br /&gt;&#39; + TimeTrade_SF1__Web_Conference_Call_Info__c + &#39;&lt;br /&gt;&lt;br /&gt;&#39; +IF(AND(TEXT(TimeTrade_SF1__Web_Conference_Type__c)=&#39;GoToMeeting&#39;,TimeTrade_SF1__Web_Conference_Call_Info__c!=&#39;VoIP&#39;),&#39;Additional numbers may be available upon entering the conference.&#39;,&#39;Additional Numbers URL:&lt;br /&gt;&#39; + TimeTrade_SF1__Web_Conference_Call_in_URL__c + &#39;&lt;br /&gt;&#39;)
,

IF(ISBLANK(TimeTrade_SF1__Invitation__r.TimeTrade_SF1__Attendee_Instructions__c), &#39;Location:&lt;br /&gt;&#39; + TimeTrade_SF1__Location__c, &#39;Call-in Details:&lt;br /&gt;&#39; + TimeTrade_SF1__Location__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Callin ICS</label>
    <type>Text</type>
</CustomField>