force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Notes__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Notes__c</fullName>
    <inlineHelpText>Copied from Invitation Location.  CTS Parameters may fill in merge references.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>