force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Related_Case__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>TimeTrade Meetings</relationshipLabel>
    <relationshipName>TimeTrade_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>