force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Routing_Evaluation_Log__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Routing_Evaluation_Log__c</fullName>
    <formula>if (ISNULL(TimeTrade_SF1__TimeTrade_Routing_Evaluation_Log__c),&#39;&#39;,
HYPERLINK(&quot;/&quot; &amp; TimeTrade_SF1__TimeTrade_Routing_Evaluation_Log__c, TimeTrade_SF1__TimeTrade_Routing_Evaluation_Log__r.Name , &quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Routing Evaluation Log</label>
    <type>Text</type>
</CustomField>