force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Schedule_URL__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Schedule_URL__c</fullName>
    <formula>$Setup.TimeTrade_SF1__TTLinkalatorSettings__c.TimeTrade_SF1__CTS_Site_URL__c + &#39;?Id=&#39; + BLANKVALUE(  TimeTrade_SF1__Invitation__r.TimeTrade_SF1__Invitation_Id_MAC__c  , TimeTrade_SF1__Invitation__c)+ &#39;&amp;MeetingID=&#39; +    Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule URL</label>
    <type>Text</type>
</CustomField>