force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Scheduled__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>