force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Subject__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Subject__c</fullName>
    <formula>TimeTrade_SF1__Invitation__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invitation Subject</inlineHelpText>
    <label>Subject</label>
    <type>Text</type>
</CustomField>