force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__TimeTrade_Debug_Log__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__TimeTrade_Debug_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TimeTrade Debug Log</label>
    <referenceTo>TimeTrade_SF1__Debug_Log__c</referenceTo>
    <relationshipLabel>TimeTrade Meetings</relationshipLabel>
    <relationshipName>TimeTrade_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>