force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__TimeTrade_Meeting_Invitation__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__TimeTrade_Meeting_Invitation__c</fullName>
    <description>Used on embedded VF page to open invitation in new tab.</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; TimeTrade_SF1__Invitation__c, TimeTrade_SF1__Invitation__r.Name , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeTrade Meeting Invitation</label>
    <type>Text</type>
</CustomField>