force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__TimeTrade_Meeting_Status_Page__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__TimeTrade_Meeting_Status_Page__c</fullName>
    <description>Used on embedded VF page to open invitation in new tab.</description>
    <formula>HYPERLINK( TimeTrade_SF1__Schedule_URL__c ,  TimeTrade_SF1__Schedule_URL__c  ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TimeTrade Meeting Status Page</label>
    <type>Text</type>
</CustomField>