force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__TimeTrade_Routing_Evaluation_Log__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__TimeTrade_Routing_Evaluation_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Meetings created from TimeTrade Routing Questionnaires, this field will point to the Evaluation Log so that the answers provided by the customer may be viewed.</description>
    <inlineHelpText>For Meetings created from TimeTrade Routing Questionnaires, this field will point to the Evaluation Log so that the answers provided by the customer may be viewed.</inlineHelpText>
    <label>TimeTrade Routing Evaluation Log</label>
    <referenceTo>TimeTrade_SF1__TimeTrade_Workflow_Evaluation__c</referenceTo>
    <relationshipLabel>TimeTrade Meetings</relationshipLabel>
    <relationshipName>TimeTrade_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>