force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Web_Conference_Call_in_URL__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Web_Conference_Call_in_URL__c</fullName>
    <label>Web Conference Call-in URL</label>
    <type>Url</type>
</CustomField>