force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Web_Conference_Call_Info__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Web_Conference_Call_Info__c</fullName>
    <description>Stores all the information relating to the dial in option for the web conference</description>
    <label>Web Conference Call Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>