force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Web_Conference_Error__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Web_Conference_Error__c</fullName>
    <formula>TimeTrade_SF1__TimeTrade_Debug_Log__r.TimeTrade_SF1__Error_Message__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Web Conference Error</label>
    <type>Text</type>
</CustomField>