force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Web_Conference_Id__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Web_Conference_Id__c</fullName>
    <description>When the Web Conference Number is a reused number like a PMI, then this field will have the actual number that may be used for reschedule and cancel.</description>
    <inlineHelpText>When the join number is a reused number like a PMI, then this field will have the actual number that may be used for reschedule and cancel.</inlineHelpText>
    <label>Web Conference Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>