force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Web_Conference_Link__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Web_Conference_Link__c</fullName>
    <label>Web Conference Link</label>
    <type>Url</type>
</CustomField>