force-app/main/default/objects/TimeTrade_SF1__Meeting__c/fields/TimeTrade_SF1__Web_Conference_Number__c.field-meta.xml
<CustomField>
    <fullName>TimeTrade_SF1__Web_Conference_Number__c</fullName>
    <label>Web Conference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>