force-app/main/default/objects/TimeTrade_SF1__Meeting__c/listViews/TimeTrade_SF1__All.listView-meta.xml
<ListView>
    <fullName>TimeTrade_SF1__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>